--- a/src/css/App.css
+++ b/src/css/App.css
@@ -121,6 +121,30 @@
   margin: 10px 0px;
 }
 
+.abilities {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  border: 1px red solid;
+}
+
+.abilities h1 {
+  margin-top: 25px;
+}
+
+.logo-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.logo {
+  width: 200px;
+  display: flex;
+  margin: 100px 75px;
+}
+
 .footer {
   display: flex;
   justify-content: center;
