--- a/src/css/App.css
+++ b/src/css/App.css
@@ -121,12 +121,21 @@
   margin: 10px 0px;
 }
 
+.hr {
+  display: flex;
+  width: 50%;
+  align-self: center;
+  height: 1px;
+  background-color: aqua;
+}
+
 .abilities {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  border: 1px red solid;
+  margin-top: 25px;
+  /* border: 1px red solid; */
 }
 
 .abilities h1 {
