--- a/src/css/Abilities.css
+++ b/src/css/Abilities.css
@@ -8,17 +8,38 @@
 }
 
 .abilities h1 {
-  margin-top: 25px;
+  margin: 25px 0px 50px 0px;
 }
 
 .logo-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  /* border: 1px red solid; */
+  width: 60%;
 }
 
-.logo {
-  width: 200px;
+.logo-skill {
   display: flex;
-  margin: 100px 75px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skill-bar {
+  display: flex;
+  width: 250px;
+  height: 15px;
+  margin: 50px;
+  background-color: gray;
+  border-radius: 1000px;
+}
+
+.skill-per {
+  display: flex;
+  background-color: aliceblue;
+  border-radius: 1000px;
+  position: absolute;
+  height: 15px;
+  /* border: 1px solid red; */
+  width: 100px;
 }
