--- a/src/css/Abilities.css
+++ b/src/css/Abilities.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: 25px;
+  margin: 25px 0px 50px 0px;
   /* border: 1px red solid; */
 }
 
