Few adjustments in general CSS and creation of contact component

--- a/src/css/Credits.css
+++ b/src/css/Credits.css
@@ -2,5 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px;
+  margin: 50px;
+}
+
+.credits h1 {
+  margin-bottom: 25px;
 }
