--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -10,7 +10,7 @@
 
 .footer p {
   display: flex;
-  width: 300px;
+  width: 100%;
   justify-content: center;
   align-items: center;
   color: white;
