--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   align-self: center;
   flex-direction: column;;
-  margin: 150px 0px 50px 0px;
+  margin: 0px 0px 50px 0px;
   width: 80%;
   /* border: solid 1px red; */
 }
@@ -34,6 +34,7 @@
   /* border: solid 1px red; */
   display: flex;
   flex-direction: row;
+  margin-top: 50px;
 }
 
 .profile-content p {
