--- a/src/css/Abilities.css
+++ b/src/css/Abilities.css
@@ -36,7 +36,7 @@
   margin: 50px;
   background-color: white;
   border-radius: 1000px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .html-skill-per {
@@ -81,6 +81,5 @@
   width: 30px;
   background-color: aliceblue;
   border-radius: 100%;
-  box-shadow: 2px 2git add .
-  px gray;
+  box-shadow: 2px 2px gray;
 }
